--- a/5051/Views/Portal/AdminLogin.cshtml
+++ b/5051/Views/Portal/AdminLogin.cshtml
@@ -10,7 +10,7 @@
         <div class="form">
 
             <div id="login">
-                <h1 style="font:Lato, sans-serif;"> Welcome to Admin Portal! </h1>
+                <h1 style="font:Lato, sans-serif"> Welcome to Admin Portal! </h1>
 
                 <form action="/" method="post">
 
