--- a/5051/Views/Home/Index.cshtml
+++ b/5051/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <header class="masthead">
 
         <h1>Nova Town</h1>
-        <h3>Earn Points, to update your avatar and stores to show off your collection!</h3>
+        <h3>Earn Points to update your avatar and stores, so you can build a great collection!</h3>
 
     </header>
 
@@ -17,7 +17,7 @@
   
 
         <div class="row">
-            <div class="col-lg-3 col-md-6 text-center">
+            <div class="col-sm-4 col-sm-4 text-center">
                 <div class="service-box">
                     <i class="fas fa-4x fa-gamepad"></i>
                     <h3>Play Game</h3>
@@ -27,7 +27,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 text-center">
+            <div class="col-sm-4 col-sm-4 text-center">
                 <div class="service-box">
                     <i class="fas fa-4x fa-file-alt"></i>
                     <h3>Build Reports</h3>
@@ -37,7 +37,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 text-center">
+            <div class="col-sm-4 col-sm-4 text-center">
                 <div class="service-box">
                     <i class="fas fa-4x fa-laptop"></i>
                     <h3>Login to Kiosk</h3>
