--- a/5051/Views/Admin/Index.cshtml
+++ b/5051/Views/Admin/Index.cshtml
@@ -16,7 +16,7 @@
                         <img src="~/Content/img/defaultReportIcon.png" class="center">
                         <br />
                         <span style="display: block; text-align: center; font-size:2.5em; color: #fff">
-                            View/Edit Reports
+                            Manage Students
                         </span>
                     </a>
                 </div>
