--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -14,6 +14,11 @@ h1 {
     font-weight: 800;
 }
 
+.student-header {
+    padding-top: 10px;
+    font-size: 5.9vw;
+}
+
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 0px;
@@ -73,18 +78,37 @@ textarea {
 }
 
 #studentnavicons {
-    position: relative;
-    top: -700px;
-    left: 900px
+
+    position: absolute;
+    left: 50%;
+    top: 12%;
+    font-size: calc(1.3vw + 1.3vh);
+    transform: translate(-50%);
 }
 
 #studentnavicons a {
-     font-size: 2.5em;
-     margin-left: 10px; 
+    font-size: calc(2vw + 2vh);
+    margin-left: 10px;
 }
 
+.community-text-medium {
+    margin-top: 5%;
+    font-size: 3.5vh;
+}
 
+.community-text-small {
+    margin-top: 3%;
+    font-size: 2.0vh;
+}
 
+#wireframe-student {
+    position: relative;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
 
 #studentnaviconstext {
     position: relative;
@@ -102,8 +126,6 @@ textarea {
 .student-index {
     background: #fefbd8;
     background-size: cover;
-    
-
 }
 
 .nav > li > a {
