Kiosk intro update

--- a/5051/Views/Home/KioskIntro.cshtml
+++ b/5051/Views/Home/KioskIntro.cshtml
@@ -1,12 +1,6 @@
 ﻿@{
-    ViewBag.Title = "Student Example";
+    ViewBag.Title = "Kiosk Intro";
 }
 <h2>@ViewBag.Title.</h2>
 
-<h3>Student Reports</h3>
-
-<p>Student Profile</p>
-
-
-
-<p>Student Report</p>
+<h3>How to use the Kiosk, more coming soon.</h3>
