adding kiosk landing page

--- a/5051/Views/Shared/_Layout.cshtml
+++ b/5051/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Student", "Login", "Portal")</li>
                     <li>@Html.ActionLink("Admin", "AdminLogin", "Portal")</li>
-                    <li>@Html.ActionLink("Kiosk Mode", "Index", "Kiosk")</li>
+                    <li>@Html.ActionLink("Kiosk Mode", "Landing", "Kiosk")</li>
                 </ul>
                 @*@Html.Partial("_LoginPartial")*@
             </div>
