--- a/5051/Views/Shared/_Layout.cshtml
+++ b/5051/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <p class="copyright text-muted small">&nbsp;&nbsp;&copy; @DateTime.Now.Year - SUperNova, all rights reserved. This website is made with <i class="fa fa-heart" aria-hidden="true"></i> by Fab5.</p>
+                        <p class="copyright text-muted small">&nbsp;&nbsp;&copy; @DateTime.Now.Year - Nova Town, all rights reserved. This website is made with <i class="fa fa-heart" aria-hidden="true"></i> by Fab5.</p>
                    
                     </div>
                 </div>
