added error message if admin passphase is incorrect

--- a/5051/Views/Kiosk/Landing.cshtml
+++ b/5051/Views/Kiosk/Landing.cshtml
@@ -25,6 +25,7 @@
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
                             <input type="text" class="form-control" name="passphase" id="passphase" placeholder="Enter your Passphase" />
+
                         </div>
                     </div>
                 </div>
@@ -34,6 +35,7 @@
                     </center>
                 </div>
                 <p>passphase: schoolworks</p>
+                <p>@Html.ValidationMessage("Error")</p>
             }
 
         </div>
